--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "init-db": "node db/init-db.js"
+    "build": "echo 'No build step required'",
+    "dev": "nodemon index.js"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
