--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "HOST=0.0.0.0 node index.js",
     "build": "echo 'No build step required'",
     "dev": "nodemon index.js"
   },
